# chess

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  chess_engine.py  engine.py  linux_env_setup.sh  main.py  pyproject.toml  readme.md  requirements.txt  utilities.py  valid_moves.py
.claude/skills/drewbert-review/: SKILL.md
benchmarks/: README.md  analyze.py
benchmarks/perft/: README.md  results.jsonl  run.py
scripts/: play.py
src/drewbert/adapters/: ascii.py  fen.py  uci.py
src/drewbert/adapters/helpers/: square_helpers.py  square_reps.py
src/drewbert/core/: helpers.py  move.py  movegen.py  perft.py  position.py  types.py
src/drewbert/eval/: materialistic.py  types.py
src/drewbert/search/: minimax.py  types.py
tests/adapters/: test_fen.py  test_uci_oracle.py  test_uci_parser.py
tests/core/: _helpers.py  test_fen.py  test_movegen.py  test_perft.py  test_position.py
tests/search/: test_minimax.py
utilities/: basic_fns.py  valid_moves.py
