[project]
name = "drewbert"
version = "0.0.1"
description = "A chess engine, written from scratch as a learning project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "python-chess>=1.10",
    "pyright>=1.1",
    "ruff>=0.5",
    "pytest-timeout>=2.4.0",
    "snakeviz>=2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drewbert"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # TODO: drop once python-chess > 1.11.2 ships a Python-3.14-clean release.
    # python-chess 1.11.2 hasn't caught up to Python 3.14's asyncio deprecations.
    # Scoped to the chess.engine module so deprecations from our own code still surface.
    "ignore::DeprecationWarning:chess.engine",
]
